--- a/pom.xml
+++ b/pom.xml
@@ -195,18 +195,18 @@
 		  <version>1.2.47</version>
 	  </dependency>
 
-	  <!-- <dependency>
+	<!--   <dependency>
              <groupId>net.sourceforge.htmlunit</groupId>
              <artifactId>htmlunit</artifactId>
              <version>2.26</version>
-         </dependency>  -->
+         </dependency>  
 	
-	   <!--  <dependency>  
+	 <dependency>  
         <groupId>xml-apis</groupId>  
         <artifactId>xml-apis</artifactId>  
         <version>1.4.01</version>  
-    </dependency>   -->
-	
+    </dependency>  
+	 -->
 	
 	<!-- 
 	 添加Spring依赖
